# lingualens-backend

./: README.md  pyproject.toml  requirements.txt
src/: config.json  inference.py  main.py  models.py  vocabulary.pkl
